--- a/src/components/sections/section-01.html
+++ b/src/components/sections/section-01.html
@@ -1,5 +1,10 @@
 <table class="w-full">
   <tr>
-    <td>section-01</td>
+    <td class="w-[21%] sm:w-[35%] pl-3 pr-1 pt-3 pb-3 align-middle align-left-table">
+    <x-image
+    imgUrl="image-2.png" 
+    class="w-[110px] h-[45px]"
+  /></td>
+    <td class="w-[79%] sm:w-[65%] sm:pr-5 sm:pl-4 pl-5 py-3 pr-28 align-middle text-[12px] leading-[13.8px] font-normal align-left-table">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</td>
   </tr>
 </table>
